Fix: Techniques can now be recieved from the backend